<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/productListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_extra_bold"
        android:textSize="@dimen/text_size_title"
        android:layout_margin="@dimen/margin_regular"
        android:text="@string/products"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <RadioGroup
        android:id="@+id/radio_group_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productListTitle">

        <RadioButton
            android:id="@+id/filter_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomRadioItem"
            android:text="@string/all"
            android:layout_marginStart="@dimen/margin_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productListTitle"/>

        <RadioButton
            android:id="@+id/filter_jacket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomRadioItem"
            android:text="@string/jackets"
            android:layout_marginStart="@dimen/margin_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productListTitle"/>
        <RadioButton
            android:id="@+id/filter_blazers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomRadioItem"
            android:text="@string/blazers"
            android:layout_marginStart="@dimen/margin_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productListTitle"/>

        <RadioButton
            android:id="@+id/filter_tees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomRadioItem"
            android:text="@string/tees"
            android:layout_marginStart="@dimen/margin_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productListTitle"/>
        </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_product"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_filter"
        tools:listitem="@layout/item_product"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_newly_added_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_regular"
        android:layout_margin="@dimen/margin_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/ic_rectangle"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_product_added"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_regular"
            android:fontFamily="@font/montserrat_extra_bold"
            android:text="@string/your_order_has_been_processed"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_close"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/button_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_close"
            app:civ_border_color="@color/black"
            app:civ_circle_background_color="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>