<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/order_confirmation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_extra_bold"
        android:textSize="@dimen/text_size_title"
        android:layout_margin="@dimen/margin_regular"
        android:text="@string/order_confirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirmation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"
        android:layout_margin="@dimen/margin_regular"
        android:background="@drawable/ic_order_confirmation_outline"
        app:layout_constraintTop_toBottomOf="@id/order_confirmation_title">

        <View
            android:id="@+id/header_background"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/ic_bg_order_confirmation"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_order_confirmation_process"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_regular"
            android:fontFamily="@font/montserrat_extra_bold"
            android:text="@string/your_order_has_been_processed"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_order"
            app:layout_constraintTop_toBottomOf="@id/header_background" />

        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_extra_bold"
            android:text="@string/your_order_has_been_processed"
            android:layout_marginBottom="@dimen/margin_regular"
            app:layout_constraintTop_toBottomOf="@id/tv_order_confirmation_process"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin_regular"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_order"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_star"
            android:background="@drawable/ic_oval"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_return_to_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_regular"
        android:background="@drawable/ic_button_bg_black"
        android:padding="@dimen/margin_regular"
        app:layout_constraintTop_toBottomOf="@id/confirmation_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/return_to_products"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_extra_bold"
            android:textSize="21sp"
            app:drawableEndCompat="@drawable/ic_feather___heart_fill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>